--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@strapi/plugin-cloud": "4.20.0",
     "@strapi/plugin-i18n": "4.20.0",
     "@strapi/plugin-users-permissions": "4.20.0",
+    "@strapi/provider-upload-cloudinary": "^4.20.0",
     "@strapi/strapi": "4.20.0",
     "pg": "8.8.0",
     "react": "^18.0.0",
