--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-router-dom": "5.3.4",
     "styled-components": "5.3.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "ajv": "^8.16.0"
+  },
   "engines": {
     "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0 <7.0.0"
